# RT1170_ThreadApp

./: CMakeLists.txt  Kconfig  README.md  prj.conf  west.yml
src/: dummy.c  dummy.h  main.c  main.h  peripheral_can.c  peripheral_can.h  threads.c  threads.h  usb.c  usb.h
